@@ -1,26 +1,29 @@
 package com.nextjedi.trading.tipbasedtrading.service;
 
+import com.nextjedi.trading.tipbasedtrading.exception.InstrumentNotFoundException;
 import com.nextjedi.trading.tipbasedtrading.dao.InstrumentRepository;
-import com.nextjedi.trading.tipbasedtrading.models.*;
+import com.nextjedi.trading.tipbasedtrading.models.ApiSecret;
+import com.nextjedi.trading.tipbasedtrading.models.InstrumentQuery;
+import com.nextjedi.trading.tipbasedtrading.models.InstrumentWrapper;
+import com.nextjedi.trading.tipbasedtrading.models.TokenAccess;
 import com.zerodhatech.kiteconnect.KiteConnect;
 import com.zerodhatech.kiteconnect.kitehttp.exceptions.KiteException;
 import com.zerodhatech.models.Instrument;
-import org.apache.commons.lang3.EnumUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static com.nextjedi.trading.tipbasedtrading.models.Constants.USER_ID;
+import static com.nextjedi.trading.tipbasedtrading.models.Constants.*;
 
 @Service
+@Slf4j
 public class InstrumentService {
-
-    Logger logger = LoggerFactory.getLogger(InstrumentService.class);
     @Autowired
     private TokenService tokenService;
 
@@ -36,19 +39,18 @@ public class InstrumentService {
     }
 
     public boolean insertInstruments(){
-        logger.info("Updating instruments");
+        log.info("Updating instruments");
         KiteConnect kiteSdk = connectToKite();
         try {
             List<Instrument> instruments = kiteSdk.getInstruments();
             List<InstrumentWrapper> instrumentWrappers
                 =instruments.stream()
-                    .filter(instrument -> EnumUtils.isValidEnumIgnoreCase(InstrumentNames.class,instrument.getName()))
-                    .map(InstrumentWrapper::new).collect(Collectors.toList());
-            logger.info("Instruments fetched", instrumentWrappers.size());
-//            todo: call on need basis not everyday
+                    .filter(instrument -> instrument.getName() !=null && (instrument.getName().equals("FINNIFTY") ||instrument.getName().equals("BANKNIFTY")))
+                    .map(InstrumentWrapper::new).toList();
+            log.info("Instruments fetched" + instrumentWrappers.size());
             instrumentRepository.deleteAll();
             instrumentRepository.saveAll(instrumentWrappers);
-            logger.info("Instruments updated");
+            log.info("Instruments updated");
             return true;
 
         } catch (KiteException | IOException e) {
@@ -57,11 +59,20 @@ public class InstrumentService {
     }
 
     public InstrumentWrapper findInstrumentWithEarliestExpiry(InstrumentQuery instrumentQuery){
-        List<InstrumentWrapper> instruments = instrumentRepository.findByStrikeAndNameAndInstrumentTypeAndSegment(
-                instrumentQuery.getStrike(), instrumentQuery.getName(), instrumentQuery.getInstrumentType(), "NFO-OPT");
-        logger.info("number of instrument ", instruments.size());
-        Collections.sort(instruments, Comparator.comparing(InstrumentWrapper::getExpiry));
-//        todo: handle empty collection
-        return instruments.get(0);
+        log.info("inside find instrument for the call");
+        try {
+            var instrument = instrumentRepository.findTopByStrikeAndNameAndInstrumentTypeAndSegment(
+                    instrumentQuery.getStrike(), instrumentQuery.getName(), instrumentQuery.getInstrumentType(), OPTION_SEGMENT, Sort.by(Sort.Direction.DESC,EXPIRY));
+            if(Objects.nonNull(instrument)){
+                log.info("instrument found", instrument.getName());
+                return instrument;
+            }else {
+                throw new InstrumentNotFoundException("Instrument is null");
+            }
+        }catch (Exception e){
+            log.error("Instrument not available", e.getMessage());
+            log.error("Query", instrumentQuery.toString());
+            throw new InstrumentNotFoundException(e.getMessage());
+        }
     }
 }
